add scrollbar to 'CGU' and OK button at the bottom

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -50,7 +50,7 @@
         <!-- modal for CGU -->
         <div class="modal fade" id="modalCGU" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
-                <div class="modal-content">
+                <div class="modal-content scroll-comment">
                     <h1 class="arrow-header my-3">Mentions légales</h1>
                     <div class="dark-container cgu-text text-light mb-5">
                         <p class="about-text hide-before-scroll show-on-scroll">
@@ -148,6 +148,9 @@
                             La qualité de ce réseau dépend de la qualité des communications, des échanges d’information, des conversations et des collaborations en ligne entre les membres."
                         </p>
                         <hr>
+                        <button type="button" class="close btn bg-kgreen opacity-100 p-2 mx-auto" data-dismiss="modal" aria-label="Close">
+                            OK
+                        </button>
                     </div>
                 </div>
             </div>
