Make Request Entity (JoinRequest). Send email requesting participation to challenge creator. email ok. Requests display ok on left (invitations like). Logic when accepting or rejecting is still missing + all clan logic

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -266,6 +266,14 @@ body {
     z-index: 500;
 }
 
+.request-popup {
+    max-width: 460px;
+    position: absolute;
+    left: 0;
+    top: 26vh;
+    z-index: 600;
+}
+
 @keyframes hide {
     to {
         opacity: 0;
