--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -70,14 +70,12 @@
                     {% endif %}
                 {% endfor %}
                 {% if challenge.isPublic == true or isClanMember == true %}
-                <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_join', {id: challenge.id}) }}">
-                    <input type="hidden" name="challengeId" value="{{ challenge.id }}">
-                    <input type="hidden" name="token" value="{{ csrf_token('challenge-join') }}"/>
-                    <button
-                            class="btn btn-participation btn-lg text-uppercase text-white"
-                            style="color:{{ color }}; border-color: {{ color }}; background-color: {{ color }}"
-                    >JE PARTICIPE</button>
-                </form>
+                    <div class="form-kyosc">
+                        <a class="btn btn-participation text-uppercase text-white"
+                           data-toggle="modal" data-target="#modalParticipationRequest"
+                           style="color:{{ color }}; border-color: {{ color }}; background-color: {{ color }}"
+                        >Demander à rejoindre</a>
+                    </div>
                 {% endif %}
             {% endif %}
             {% if app.user and app.user == challenge.creator %}
@@ -115,6 +113,32 @@
             </div>
         </div>
     {#       end of modal for challenge invitation pop-up#}
+
+    {#        modal for participation resquest pop-up#}
+    <div class="modal fade" id="modalParticipationRequest" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h2 style="color: {{color}}" class="modal-title" id="exampleModalLongTitle">Envoyez une demande à {{ challenge.creator.firstname }} pour rejoindre cette aventure</h2>
+                </div>
+                <div class="modal-body d-flex justify-content-center align-items-center bg-dark">
+                    <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-4 form-kyosc" method="post" action="{{ path('challenge_request-to-join', {id: challenge.id}) }}">
+                        <input type="hidden" name="challengeId" value="{{ challenge.id }}">
+                        <input type="hidden" name="token" value="{{ csrf_token('challenge-request-to-join') }}"/>
+                        <textarea name="requestMessage" class="w-75" placeholder="Saluez {{ challenge.creator.firstname }} et faites lui part de votre envie de rejoindre son aventure" required></textarea>
+                        <button
+                                class="btn btn-participation btn-lg text-uppercase text-white my-4"
+                                style="color:{{ color }}; border-color: {{ color }}; background-color: {{ color }}"
+                        >Envoyer ma demande</button>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    {#       end of modal for participation resquest pop-up#}
 
     {#        modal for youtube video pop-up#}
     <div class="modal fade" id="youtubeLinkForm" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
