--- a/templates/homeBase.html.twig
+++ b/templates/homeBase.html.twig
@@ -28,6 +28,17 @@
                 {{ include('component/_invitations.html.twig') }}
             {% endif %}
         {% endif %}
+        {% if app.user and app.user.requestsReceived is not empty %}
+            {% set isRequestPopup = false %}
+            {% for request in app.user.requestsReceived %}
+                {% if not request.isAccepted and not request.isRejected %}
+                    {% set isRequestPopup = true %}
+                {% endif %}
+            {% endfor %}
+            {% if isRequestPopup %}
+                {{ include('component/_join-requests.html.twig') }}
+            {% endif %}
+        {% endif %}
         {{ render_esi(path('ch_cookie_consent.show_if_cookie_consent_not_set', { 'locale' : 'fr' })) }}
         {% for category, messages in app.flashes %}
             {% for message in messages %}
