Accepting and rejecting join request OK !

--- a/templates/component/_join-requests.html.twig
+++ b/templates/component/_join-requests.html.twig
@@ -27,12 +27,12 @@
                         <div class="align-middle align-self-center mb-2 form-kyosc">
                             <a class="text-white btn bg-kblue mx-2" href="{{path('challenge_show', {id: request.challenge.id})}}">Voir l'aventure</a>
                         </div>
-                        <form class="align-middle align-self-center mb-2 form-kyosc" method="post" action="{{ path('challenge_join', {id: request.challenge.id}) }}">
-                            <input type="hidden" name="challengeId" value="{{ request.challenge.id }}">
-                            <input type="hidden" name="token" value="{{ csrf_token('challenge-join') }}"/>
+                        <form class="align-middle align-self-center mb-2 form-kyosc" method="post" action="{{ path('challenge_accept-request', {id: request.challenge.id}) }}">
+                            <input type="hidden" name="requestId" value="{{ request.id }}">
+                            <input type="hidden" name="token" value="{{ csrf_token('challenge-accept-request') }}"/>
                             <button class="text-white btn bg-kgreen mx-2">Accepter</button>
                         </form>
-                        <form class="align-middle align-self-center mb-2 form-kyosc" method="post" action="{{path('challenge_decline', {id: request.challenge.id})}}">
+                        <form class="align-middle align-self-center mb-2 form-kyosc" method="post" action="{{path('challenge_decline-request', {id: request.challenge.id})}}">
                             <button class="text-white btn bg-kred mx-2">Refuser</button>
                         </form>
                     {% endif %}
