--- a/templates/email/clan-request.html.twig
+++ b/templates/email/clan-request.html.twig
@@ -3,20 +3,20 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <title>Demande à rejoindre une aventure</title>
+        <title>Demande à rejoindre un clan</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     </head>
     <body class="w-75">
-        <h1 class="text-center mb-4">Un membre KYOSC souhaite rejoindre l'une de vos aventures !</h1>
-        <p>Hello, {{ user.firstName }} {{ user.lastName }} a fait une demande afin de rejoindre votre aventure "{{ challenge.title }}".</p>
+        <h1 class="text-center mb-4">Un membre KYOSC souhaite rejoindre l'un de vos clans !</h1>
+        <p>Hello, {{ user.firstName }} {{ user.lastName }} a fait une demande afin de rejoindre votre clan "{{ clan.name }}".</p>
         <p>Voici son message : {{ requestMessage }}</p>
         <p>Afin d'accepter ou refuser cette demande, il vous faut vous connecter sur la plateforme KYOSC :</p>
         <div class="m-3">
             <a href="{{url('app_login') }}" class="btn btn-success text-uppercase text-white mx-2">Se connecter</a>
         </div>
-        <p>Pour voir les détails de cette aventure:</p>
+        <p>Pour voir les détails de ce clan:</p>
         <div class="m-3">
-            <a href="{{url('challenge_show', {id: challenge.id}) }}" class="btn btn-info">Voir l'aventure</a>
+            <a href="{{url('clan_show', {id: clan.id}) }}" class="btn btn-info">Voir le clan</a>
         </div>
         <a href="https://kyosc.com/" class="p-3 m-3" style="background-color: black;">
             <img src="https://kyosc.com/build/images/logo/kyoscblanc.0fb22059.png" style="height: 150px;">
