--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -104,7 +104,13 @@
         <div class="modal fade" id="favoriteSportChoice" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
             <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
-                    <div class="form-check d-flex align-items-center mt-0 py-5 flex-row flex-wrap justify-content-center background-grey w-100">
+                    <div class="modal-header">
+                        <h2 class="modal-title" id="exampleModalLongTitle">Choix de mes sports préférés</h2>
+                        <button type="button" class="close bg-dark" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                        </button>
+                    </div>
+                    <div class="modal-body form-check d-flex align-items-center mt-0 py-5 flex-row flex-wrap justify-content-center background-grey w-100 scroll-comment">
                         <div class="col-12 col-lg-6 p-3 d-flex justify-content-center">
                             <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
                         </div>
@@ -159,18 +165,26 @@
             <div class="modal fade" id="favoriteBrandsChoice" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
-                        <div class="form-group col-lg-8 col-md-6 col-sm-12 col-12 align-self-center">
-                            {{ form_help(form.favoriteBrands) }}
-                            {{ form_widget(form.favoriteBrands) }}
-                            {{ form_errors(form.favoriteBrands) }}
+                        <div class="modal-header">
+                            <h2 class="modal-title" id="exampleModalLongTitle">Choix de mes marques préférées</h2>
+                            <button type="button" class="close bg-dark" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                            </button>
                         </div>
-                        <div class="form-group col-lg-8 col-md-6 col-sm-12 col-12 align-self-center">
-                            {{ form_help(form.brandSuggestion) }}
-                            {{ form_widget(form.brandSuggestion) }}
-                            {{ form_errors(form.brandSuggestion) }}
-                        </div>
-                        <div class="col-12 col-lg-6 p-3 d-flex justify-content-center align-self-center">
-                            <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                        <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                            <div class="form-group col-lg-8 col-md-6 col-sm-12 col-12 align-self-center">
+                                {{ form_help(form.favoriteBrands) }}
+                                {{ form_widget(form.favoriteBrands) }}
+                                {{ form_errors(form.favoriteBrands) }}
+                            </div>
+                            <div class="form-group col-lg-8 col-md-6 col-sm-12 col-12 align-self-center">
+                                {{ form_help(form.brandSuggestion) }}
+                                {{ form_widget(form.brandSuggestion) }}
+                                {{ form_errors(form.brandSuggestion) }}
+                            </div>
+                            <div class="col-12 col-lg-6 p-3 d-flex justify-content-center align-self-center">
+                                <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -185,13 +199,21 @@
             <div class="modal fade" id="favoriteDestinationsChoice" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered" role="document">
                     <div class="modal-content">
-                        <div class="form-group col-lg-8 col-md-6 col-sm-12 col-12 align-self-center">
-                            {{ form_help(form.favoriteDestination) }}
-                            {{ form_widget(form.favoriteDestination) }}
-                            {{ form_errors(form.favoriteDestination) }}
+                        <div class="modal-header">
+                            <h2 class="modal-title" id="exampleModalLongTitle">Choix de mes marques préférées</h2>
+                            <button type="button" class="close bg-dark" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                            </button>
                         </div>
-                        <div class="col-12 col-lg-6 p-3 d-flex justify-content-center align-self-center">
-                            <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                        <div class="modal-body d-flex flex-column justify-content-center align-items-center">
+                            <div class="form-group col-lg-8 col-md-6 col-sm-12 col-12 align-self-center">
+                                {{ form_help(form.favoriteDestination) }}
+                                {{ form_widget(form.favoriteDestination) }}
+                                {{ form_errors(form.favoriteDestination) }}
+                            </div>
+                            <div class="col-12 col-lg-6 p-3 d-flex justify-content-center align-self-center">
+                                <button type="submit" class="btn-login btn btn-lg">Enregistrer</button>
+                            </div>
                         </div>
                     </div>
                 </div>
