New design for profile_show with more modals and better look for them too (bg-dark) + some key informations are displayed along with profile picture

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -302,6 +302,18 @@ body {
     transform: translateY(0em);
 }
 
+.scroll-comment {
+    max-height: 600px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+}
+
+.scroll-modal {
+    max-height: 400px;
+    overflow-y: scroll;
+    scrollbar-width: thin;
+}
+
 .close-picto {
     cursor: pointer;
 }
