Invitations and requests displayed in user profile + avatar bug when little corrected (liip) + better display for participants in clans and challenges

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -76,6 +76,10 @@ body {
     background-color: theme-color-level('kred');
 }
 
+.bg-korange {
+    background-color: theme-color-level('korange');
+}
+
 .opacity-100 {
     opacity: 1;
 }
