--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -126,7 +126,7 @@
     </div>
     <div class="w-75 mx-auto my-5 participants transparent-background-dark p-3">
         <h2 class="h5 text-uppercase text-center mb-4">{{ clan.members|length}} membre{{ clan.members|length>1?'s':''}}</h2>
-        <div class=" container d-flex justify-content-center">
+        <div class=" container d-flex flex-wrap justify-content-center scroll-comment">
             {% for member in clan.members %}
                 <div class="d-flex flex-column align-items-center m-4">
                     <a href="{{ path("profil_show", {id: member.id}) }}">
