--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -265,8 +265,10 @@
                 <button class="nav-link border-right border-top" id="nav-created-clans-tab" data-toggle="tab" data-target="#nav-created-clans" type="button" role="tab" aria-controls="nav-created-clans" aria-selected="false">Clans créés ({{ user.createdClans|length }})</button>
                 <button class="nav-link border-right border-top" id="nav-member-clans-tab" data-toggle="tab" data-target="#nav-member-clans" type="button" role="tab" aria-controls="nav-member-clans" aria-selected="false">Mes autres clans ({{ user.clans|length - user.createdClans|length }})</button>
                 <button class="nav-link border-right border-top" id="nav-invitations-sent-tab" data-toggle="tab" data-target="#nav-invitations-sent" type="button" role="tab" aria-controls="nav-invitations-sent" aria-selected="false">Invitations envoyées ({{ user.invitationsSent|length }})</button>
+                <button class="nav-link border-right border-top" id="nav-requests-sent-tab" data-toggle="tab" data-target="#nav-requests-sent" type="button" role="tab" aria-controls="nav-requests-sent" aria-selected="false">Demandes envoyées ({{ user.requestsSent|length }})</button>
             </div>
         </nav>
+{#        Start of tab-content #}
         <div class="tab-content" id="nav-tabContent">
 {#            First tab coming challenges #}
             <div class="tab-pane fade show active" id="nav-challenges" role="tabpanel" aria-labelledby="nav-challenges-tab">
@@ -296,7 +298,12 @@
                             </div>
                         </div>
                     {% else %}
-                        <p class="text-center">Pas d'aventures à venir</p>
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <p class="text-center text-white">Pas d'aventures à venir</p>
+                            <div class="form-kyosc d-flex align-items-center justify-content-center m-4">
+                                <a href="{{ path('challenge_new') }}" class="btn-login btn btn-lg">Créer une aventure</a>
+                            </div>
+                        </div>
                     {% endfor %}
                 </div>
             </div>
@@ -328,7 +335,7 @@
                             </div>
                         </div>
                     {% else %}
-                        <p class="text-center">Pas d'aventures passées</p>
+                        <p class="text-center text-white">Pas d'aventures passées</p>
                     {% endfor %}
                 </div>
             </div>
@@ -336,7 +343,7 @@
             <div class="tab-pane fade" id="nav-created-clans" role="tabpanel" aria-labelledby="nav-created-clans-tab">
                 <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center scroll-comment p-4">
                     {% for clan in user.createdClans %}
-                        <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-3 m-3 position-relative index-card-max-width">
+                        <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-2 m-3 position-relative index-card-max-width">
                             <a class="card text-decoration-none text-dark no-bg-border"
                                href="{{ path("clan_show", {id: clan.id}) }}">
                                 <div class="position-relative">
@@ -369,7 +376,12 @@
                             </div>
                         </div>
                     {% else %}
-                        <p>Vous n'avez pas encore créé de clan</p>
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <p class="text-center text-white">Vous n'avez pas encore créé de clan</p>
+                            <div class="form-kyosc d-flex align-items-center justify-content-center m-4">
+                                <a href="{{ path('clan_new') }}" class="btn-login btn btn-lg">Créer un clan</a>
+                            </div>
+                        </div>
                     {% endfor %}
                 </div>
             </div>
@@ -378,7 +390,7 @@
                 <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center scroll-comment p-4">
                     {% for clan in user.clans %}
                         {% if user != clan.creator %}
-                            <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-3 m-3 position-relative index-card-max-width">
+                            <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-2 m-3 position-relative index-card-max-width">
                                 <a class="card text-decoration-none text-dark no-bg-border"
                                    href="{{ path("clan_show", {id: clan.id}) }}">
                                     <div class="position-relative">
@@ -408,14 +420,106 @@
                             </div>
                         {% endif %}
                     {% else %}
-                        <p>Vous ne faites pas parti du clan d'un.e autre utilisateur.trice</p>
+                        <div class="d-flex flex-column justify-content-center align-items-center">
+                            <p class="text-center text-white">Vous ne faites pas parti du clan d'un.e autre utilisateur.trice</p>
+                            <div class="form-kyosc d-flex align-items-center justify-content-center m-4">
+                                <a href="{{ path('clan_index') }}" class="btn-login btn btn-lg">Tous les clans</a>
+                            </div>
+                        </div>
+                        <p></p>
                     {% endfor %}
                 </div>
             </div>
 {#            Fifth tab invitations #}
             <div class="tab-pane fade" id="nav-invitations-sent" role="tabpanel" aria-labelledby="nav-invitations-sent-tab">
+                <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center scroll-comment p-4">
+                    {% for invitation in user.invitationsSent %}
+                        <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-2 m-3 index-card-max-width">
+                            <div class="text-dark text-center">
+                                <h3 class="h6 text-center">Le {{ invitation.createdAt|format_datetime(pattern="dd MMMM Y",locale='fr') }}</h3>
+                                <span class="pre-line">Invitation à rejoindre <span class="font-weight-bold">{{ invitation.clan ? 'le clan: ' : 'l\'aventure: ' }}</span>
+                                    "{{ invitation.clan ? invitation.clan.name : invitation.challenge.title }}"
+                                </span>
+                                {% if invitation.invitedUSer is not null %}
+                                    <div class="d-flex flex-column align-items-center">
+                                        <a href="{{ path("profil_show", {id: invitation.invitedUSer.id}) }}">
+                                            {% if invitation.invitedUSer.profilPhoto is not null %}
+                                                <img class="participant-photo-challenge mb-2 avatar" src="{{ vich_uploader_asset(invitation.invitedUSer, 'profilPhotoFile')| imagine_filter('avatar_thumb') }}" alt="profilPhoto of challenge creator">
+                                            {% else %}
+                                                <img class="participant-photo-challenge mb-2 avatar" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture">
+                                            {% endif %}
+                                        </a>
+                                        <span class="font-weight-bold">{{ invitation.invitedUSer.pseudo ? : invitation.invitedUSer.firstname }}</span>
+                                    </div>
+                                {% else %}
+                                    <div class="d-flex flex-column align-items-center">
+                                        <img class="participant-photo-challenge mb-2 avatar" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture">
+                                        <span class="font-weight-bold">{{ invitation.recipient }}</span>
+                                    </div>
+                                {% endif %}
+                                {% if invitation.isAccepted %}
+                                    <div class="bg-kgreen p-2 m-2 rounded">Acceptée</div>
+                                {% elseif invitation.isRejected %}
+                                    <div class="bg-kred p-2 m-2 rounded">Refusée</div>
+                                {% else %}
+                                    <div class="bg-korange p-2 m-2 rounded">En attente</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% else %}
+                        <p class="text-center text-white">Pas d'invitations envoyées</p>
+                    {% endfor %}
+                </div>
+            </div>
+{#            Sixth tab joinRequests #}
+            <div class="tab-pane fade" id="nav-requests-sent" role="tabpanel" aria-labelledby="nav-requests-sent-tab">
+                <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center scroll-comment p-4">
+                    {% for request in user.requestsSent %}
+                        <div class="card col-12 col-sm-6 col-md-4 col-xl-3 p-2 m-3 index-card-max-width">
+                            <div class="text-dark text-center">
+                                <h3 class="h6 text-center">Le {{ request.createdAt|format_datetime(pattern="dd MMMM Y",locale='fr') }}</h3>
+                                <span class="pre-line">Demande pour rejoindre <span class="font-weight-bold">{{ request.clan ? 'le clan: ' : 'l\'aventure: ' }}</span>
+                                    "{{ request.clan ? request.clan.name : request.challenge.title }}"
+                                </span>
+                                {% if request.clan is not null %}
+                                    <a class="card text-decoration-none text-dark no-bg-border"
+                                       href="{{ path("clan_show", {id: request.clan.id}) }}">
+                                        {% if request.clan.banner is not null %}
+                                            <img src="{{ vich_uploader_asset(request.clan, 'bannerFile') | imagine_filter('challenge_thumb') }}"
+                                                 alt="photo du clan" class="w-100 challenge-photo-container">
+                                        {% else %}
+                                            <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
+                                                 alt="photo par défaut du clan" class="w-100 challenge-photo-container">
+                                        {% endif %}
+                                    </a>
+                                {% else %}
+                                    <a class=" text-decoration-none text-dark h-100"
+                                       href="{{ path("challenge_show", {id: request.challenge.id}) }}">
+                                        {% if request.challenge.challengePhoto is not null %}
+                                            <img src="{{ vich_uploader_asset(request.challenge, 'challengePhotoFile') | imagine_filter('challenge_thumb')  }}"
+                                                 alt="photo du challenge" class="w-100 challenge-photo-container">
+                                        {% else %}
+                                            <img src="{{ asset('uploads/challenge/challenge-default.jpeg') }}"
+                                                 alt="photo par défaut du challenge" class="w-100 challenge-photo-container">
+                                        {% endif %}
+                                    </a>
+                                {% endif %}
+                                {% if request.isAccepted %}
+                                    <div class="bg-kgreen p-2 m-2 rounded">Acceptée</div>
+                                {% elseif request.isRejected %}
+                                    <div class="bg-kred p-2 m-2 rounded">Refusée</div>
+                                {% else %}
+                                    <div class="bg-korange p-2 m-2 rounded">En attente</div>
+                                {% endif %}
+                            </div>
+                        </div>
+                    {% else %}
+                        <p class="text-center text-white">Pas de demandes envoyées</p>
+                    {% endfor %}
+                </div>
             </div>
         </div>
+{#        End of tab-content #}
     </section>
     <div class="mt-5 pb-5 d-flex flex-column align-items-center form-kyosc">
         {% include('user/_delete_form.html.twig') %}
