--- a/templates/challenge/show.html.twig
+++ b/templates/challenge/show.html.twig
@@ -53,7 +53,7 @@
             </div>
         </div>
         <div class="d-flex flex-column justify-content-center">
-            {% if app.user in challenge.participants %}
+            {% if app.user in challenge.participants and app.user != challenge.creator %}
                 <form class="align-middle align-self-center mb-4 form-kyosc" method="post" action="{{ path('challenge_leave', {id: challenge.id}) }}">
                     <input type="hidden" name="challengeId" value="{{ challenge.id }}">
                     <input type="hidden" name="token" value="{{ csrf_token('challenge-leave') }}"/>
@@ -62,7 +62,7 @@
                             style="background-color: {{ color }}"
                     >JE NE PARTICIPE PLUS</button>
                 </form>
-            {% elseif app.user %}
+            {% elseif app.user and app.user != challenge.creator %}
                 {% set isClanMember = false %}
                 {% for clan in challenge.clans %}
                     {% if app.user in clan.members %}
@@ -79,11 +79,14 @@
                 {% endif %}
             {% endif %}
             {% if app.user and app.user == challenge.creator %}
-            <div class="form-kyosc">
+            <div class="form-kyosc mb-4">
                 <a class="btn btn-participation text-uppercase text-white"
                    data-toggle="modal" data-target="#modalInvitation"
                    style="color:{{ color }}; border-color: {{ color }}; background-color: {{ color }}"
                 >J'invite des amis</a>
+            </div>
+            <div class="form-kyosc">
+                <a class="btn btn-register" href="{{ path('challenge_edit', {id: challenge.id})}}">Modifier</a>
             </div>
             {% endif %}
         </div>
