--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -65,7 +65,7 @@
         </div>
         <div class="home-choice hide-before-scroll show-on-scroll">
             <img src="{{ asset('build/images/picto/kblason.png') }}" class="home-choice-picto mb-3">
-            <h2 class="text-kred">Venez cumuler des points<br> et remporter des challenges</h2>
+            <h2 class="text-kred">Venez gagnez<br> des récompenses</h2>
             <img src="{{ asset('build/images/fleche/fhnoir.png') }}" class="up-arrow-choice">
         </div>
     </section>
