--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -326,6 +326,16 @@ body {
     max-width: 400px;
 }
 
+.comment-counter {
+    bottom: 1px;
+    left: 0;
+}
+
+.user-counter {
+    bottom: 1px;
+    left: 65px;
+}
+
 .max-width-800 {
     max-width: 800px;
 }
