--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -45,7 +45,16 @@
             <div class="form-kyosc mb-3 mb-md-0">
                 <a class="btn text-uppercase btn-login"
                    href="{{ path("clan_my-clan", {id: clan.id}) }}"
-                >Entrer dans l'espace privé</a>
+                >Entrer dans l'espace privé
+                    <img class="delete-icon rounded" src="{{ asset('build/images/picto/comment.png') }}">
+                    {% set notPublicMessageCount = 0 %}
+                    {% for message in clan.messages %}
+                        {% if message.isPublic == false %}
+                            {% set notPublicMessageCount = notPublicMessageCount + 1 %}
+                        {% endif %}
+                    {% endfor %}
+                    <span class="transparent-background-dark p-1">{{ notPublicMessageCount }}</span>
+                </a>
             </div>
         {% endif %}
 
