--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -421,7 +421,7 @@
                         {% endif %}
                     {% else %}
                         <div class="d-flex flex-column justify-content-center align-items-center">
-                            <p class="text-center text-white">Vous ne faites pas parti du clan d'un.e autre utilisateur.trice</p>
+                            <p class="text-center text-white">Vous ne faites pas partie du clan d'un.e autre utilisateur.trice</p>
                             <div class="form-kyosc d-flex align-items-center justify-content-center m-4">
                                 <a href="{{ path('clan_index') }}" class="btn-login btn btn-lg">Tous les clans</a>
                             </div>
