--- a/templates/email/clan-invitation.html.twig
+++ b/templates/email/clan-invitation.html.twig
@@ -1,30 +1,19 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Invitation à rejoindre un clan</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-</head>
-    <body>
-        <h1>Vous avez été invité à rejoindre une clan KYOSC !</h1>
-        <p>Hello, vous avez été convié·e·s par {{ user.firstName }} {{ user.lastName }} à rejoindre le clan "{{ clan.name }}".</p>
-        <p>Afin d'accepter ou refuser cette invitation, il vous faut vous connecter ou créer un compte sur la plateforme KYOSC :</p>
-        <div class="m-3">
-            <a href="{{url('app_login') }}" class="btn btn-success text-uppercase text-white mx-2">Se connecter</a>
-            <a href="{{url('app_register') }}" class="btn btn-warning text-uppercase text-white mx-2">Créer un compte</a>
-        </div>
-        <p>Pour voir les détails du clan en question:</p>
-        <div class="m-3">
-            <a href="{{url('clan_show', {id: clan.id}) }}" class="btn btn-info">Voir le clan</a>
-        </div>
-        <a href="https://kyosc.com/" class="p-3 m-3" style="background-color: black;">
-            <img src="https://kyosc.com/build/images/logo/kyoscblanc.0fb22059.png" style="height: 150px;">
-        </a>
-        <p>A bientôt sur la plateforme !</p>
-        <p>l'équipe Kyosc</p>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
-</html>
+{% extends 'email/base.html.twig' %}
+
+{% block title %}
+    Invitation à rejoindre un clan
+{% endblock %}
+
+{% block content %}
+    <h1>Vous avez été invité à rejoindre une clan KYOSC !</h1>
+    <p>Hello, vous avez été convié·e·s par {{ user.firstName }} {{ user.lastName }} à rejoindre le clan "{{ clan.name }}".</p>
+    <p>Afin d'accepter ou refuser cette invitation, il vous faut vous connecter ou créer un compte sur la plateforme KYOSC :</p>
+    <div class="m-3">
+        <a href="{{url('app_login') }}" class="btn btn-success text-uppercase text-white mx-2">Se connecter</a>
+        <a href="{{url('app_register') }}" class="btn btn-warning text-uppercase text-white mx-2">Créer un compte</a>
+    </div>
+    <p>Pour voir les détails du clan en question:</p>
+    <div class="m-3">
+        <a href="{{url('clan_show', {id: clan.id}) }}" class="btn btn-info">Voir le clan</a>
+    </div>
+{% endblock %}
