User index OK + contact button that send a message (mail) to target user + some typo in other files

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -218,6 +218,14 @@ body {
     border-radius: 50%;
 }
 
+.width-100px {
+    width: 100px;
+}
+
+.flex-basis {
+    flex: 0 1 300px;
+}
+
 .biography-text {
     font-size: 1.4em;
 }
