--- a/templates/profil/show.html.twig
+++ b/templates/profil/show.html.twig
@@ -588,7 +588,7 @@
                     {% endfor %}
                 </div>
             </div>
-{#            seventh tab invitations #}
+{#            seventh tab pending invitations #}
             <div class="tab-pane fade" id="nav-pending-invitations-sent" role="tabpanel" aria-labelledby="nav-pending-invitations-sent-tab">
                 <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center scroll-comment p-4">
                     {% if isTherePendingInvitationsSent %}
@@ -674,7 +674,7 @@
                     {% endfor %}
                 </div>
             </div>
-{#            nineth tab joinRequests #}
+{#            nineth tab pending joinRequests #}
             <div class="tab-pane fade" id="nav-pending-requests-sent" role="tabpanel" aria-labelledby="nav-pending-requests-sent-tab">
                 <div class="d-flex flex-column flex-md-row flex-wrap justify-content-center align-items-center scroll-comment p-4">
                     {% if isTherePendingRequestsSent %}
