--- a/templates/clan/show.html.twig
+++ b/templates/clan/show.html.twig
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>
-    {#       end of modal for journey pop-up#}
+    {#       end of modal for clan invitation pop-up#}
 
     {#        modal for joining resquest pop-up#}
     <div class="modal fade" id="modalJoinRequest" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
