--- a/templates/component/_header.html.twig
+++ b/templates/component/_header.html.twig
@@ -2,27 +2,7 @@
     <button class="navbar-toggler" type="button">
         <span class="navbar-toggler-icon"></span>
     </button>
-    <ul class="sidenav">
-        {% if app.user %}
-            {% if is_granted('ROLE_ADMIN') %}
-                <a href="{{ path("admin") }}">Espace administrateur</a>
-            {% endif %}
-        {% endif %}
-        <li> <a href="{{ path("home") }}">Accueil</a> </li>
-        {% if app.user %}
-            <li> <a href="{{ path("profil_my_profil") }}">Mon espace</a> </li>
-            <li> <a href="{{ path("challenge_index") }}">Les aventures</a> </li>
-            <li> <a href="{{ path("challenge_new") }}">Nouvelle aventure</a> </li>
-            <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
-            <li> <a href="{{ path("clan_new") }}">Nouveau clan</a> </li>
-            <li> <a href="{{ path("app_logout") }}">Déconnexion</a> </li>
-        {% else %}
-            <li> <a href="{{ path("challenge_index") }}">Les aventures</a> </li>
-            <li> <a href="{{ path("clan_index") }}">Les clans</a> </li>
-            <li> <a href="{{ path("app_login") }}">Se connecter</a> </li>
-        {% endif %}
-        <li> <a href="{{ path("faq") }}">Aide</a> </li>
-    </ul>
+    {{ include('component/_burger-content.html.twig') }}
     {% if app.user  %}
         <a href="{{ path("profil_my_profil") }}" class="w-25 text-center">
             {% if app.user.profilPhoto is not null%}
