--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,45 +1,64 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}User index{% endblock %}
+{% block title %}Membres KYOSC{% endblock %}
 
 {% block body %}
-    <h1>User index</h1>
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Points</th>
-                <th>ProfilPhoto</th>
-                <th>Roles</th>
-                <th>Password</th>
-                <th>IsVerified</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.points }}</td>
-                <td>{{ user.profilPhoto }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
-                <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
-                <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="8">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
-
-    <a href="{{ path('user_new') }}">Create new</a>
+    <header {% if sportColor %} class="index-header d-flex align-items-center text-uppercase mt-5 mb-5" style="background: {{ sportColor }};"
+    {% else %} class="d-flex align-items-center text-uppercase mt-3 mb-5 bg-dark text-white"
+            {% endif %}>
+        <img src="{{ sportLogo }}" alt="Logo KYOSC" class="logo-challenge">
+        <h1 class="challenge-index-title text-white">Tous les membres KYOSC !</h1>
+    </header>
+    <main class="container-fluid">
+        <div class="row justify-content-center w-75 m-auto">
+            {% for user in users %}
+                <div class="d-flex flex-column align-items-center justify-content-center m-2 width-100px flex-basis transparent-background-dark p-2">
+                    <a href="{{ path("profil_show", {id: user.id}) }}">
+                        {% if user.profilPhoto is not null %}
+                            <img class="participant-photo-challenge mb-2 avatar" src="{{ vich_uploader_asset(user, 'profilPhotoFile')| imagine_filter('avatar_thumb') }}" alt="profilPhoto of challenge creator">
+                        {% else %}
+                            <img class="participant-photo-challenge mb-2 avatar" src="{{ asset('uploads/profils/default-profil-picture.png') }}" alt="default profil picture">
+                        {% endif %}
+                    </a>
+                    <p>{% if user.pseudo %}
+                           {{ user.firstName }}<br>
+                            "{{ user.pseudo }}"
+                        {% else %}
+                            {{ user.firstName }}
+                        {% endif %}
+                    </p>
+                    <div class="form-kyosc mb-3 mb-md-0">
+                        <a class="btn text-uppercase btn-profil"
+                           data-toggle="modal" data-target="#modalContact{{ user.id }}"
+                        >Contacter</a>
+                    </div>
+                </div>
+                {#        modal for contact pop-up#}
+                <div class="modal fade" id="modalContact{{ user.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                    <div class="modal-dialog modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h2 class="modal-title" id="exampleModalLongTitle">Contactez {{ user.firstname }}</h2>
+                            </div>
+                            <div class="modal-body d-flex justify-content-center align-items-center bg-dark">
+                                <form class="w-100 d-flex flex-column justify-content-center align-items-center mb-4 form-kyosc" method="post" action="{{ path('profil_contact-user', {id: user.id}) }}">
+                                    <input type="hidden" name="token" value="{{ csrf_token('contact-user') }}"/>
+                                    <textarea name="contactMessage" class="w-75" placeholder="Entrez votre message pour {{ user.firstname }} ici" required></textarea>
+                                    <button
+                                            class="btn text-uppercase btn-login my-4"
+                                    >Envoyer</button>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true"><img src="{{ asset('build/images/picto/close.png') }}" class="close-picto m-2" alt="white closing cross"></span>
+                                    </button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {#       end of modal for contact pop-up#}
+            {% else %}
+                <p>Aucun membre trouvé.</p>
+            {% endfor %}
+        </div>
+    </main>
 {% endblock %}
